chore(deps): add "@hecticme/eslint-config" and "eslint"

--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "nuxt": "^3.10.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "@hecticme/eslint-config": "^0.0.0",
+    "eslint": "^9.0.0"
   }
 }
