chore: specify `pnpm@9.2.0` as package manager

--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "devDependencies": {
     "@hecticme/eslint-config": "^0.0.0",
     "eslint": "^9.0.0"
-  }
+  },
+  "packageManager": "pnpm@9.2.0"
 }
